--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>| K-FEST |</title>
-    <link rel="shortcut icon" href="img/iconoKorea.png">
+    <link rel="shortcut icon" href="img/pngwing.com.png">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
